--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
         <a href="Java/Java.html">Java</a>
         <a href="C/C.html">C</a>
         <a href="CSS/CSS.html">CSS</a>
-        <a href="#">JS</a>
-        <a href="#">Swift</a>
     </div>
     <div class="box">
         <table>
@@ -74,7 +72,7 @@
             </tr>
         </table>
     </div>
-    
+
     <!-- Razine Programskih jezika -->
     <div class="box">
         <h2>Razine Programskih jezika</h2>
@@ -111,199 +109,190 @@
         </p>
     </div>
     <div class="box">
-    <h2>Tipovi Programskih jezika.</h2>
-    <p>Postoje <b>jako</b> puno tipova programskih jezika </p>
-    <br />
-    <p>Neki tipovi su:</p>
-    <ul>
-        <li>Objektno orijentirano</li>
-        <li>Proceduralno</li>
-        <li>funkcijsko</li>
+        <h2>Tipovi Programskih jezika.</h2>
+        <p>Postoje <b>jako</b> puno tipova programskih jezika </p>
+        <br />
+        <p>Neki tipovi su:</p>
+        <ul>
+            <li>Objektno orijentirano</li>
+            <li>Proceduralno</li>
+            <li>funkcijsko</li>
 
-        <button id="myBtn" class="button">Klikni za više!</button></li>
-    </ul>
-    <div id="myModal" class="modal">
+            <button id="myBtn" class="button">Klikni za više!</button></li>
+        </ul>
+        <div id="myModal" class="modal">
 
-        <!-- Lista Svih Tipova -->
-        <div class="modal-content">
-            <div class="modal-header">
-                <span class="close">&times;</span>
-                <h2>Tipovi programskih jezika</h2>
+            <!-- Lista Svih Tipova -->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <span class="close">&times;</span>
+                    <h2>Tipovi programskih jezika</h2>
+                </div>
+                <span class="close"></span>
+                <p>
+                    1	Array languages<br />
+                    2	Assembly languages<br />
+                    3	Authoring languages<br />
+                    4	Constraint programming languages<br />
+                    5	Begin...End languages<br />
+                    6	Command line interface languages<br />
+                    7	Compiled languages<br />
+                    8	Concurrent languages<br />
+                    9	Curly-bracket languages<br />
+                    10	Dataflow languages<br />
+                    11	Data-oriented languages<br />
+                    12	Data-structured languages<br />
+                    13	Decision table languages<br />
+                    14	Declarative languages<br />
+                    15	Embeddable languages<br />
+                    15.1	In source code<br />
+                    15.1.1	Server side<br />
+                    15.1.2	Client side<br />
+                    15.2	In object code<br />
+                    16	Educational languages<br />
+                    17	Esoteric languages<br />
+                    18	Extension languages<br />
+                    19	Fourth-generation languages<br />
+                    20	Functional languages<br />
+                    20.1	Pure<br />
+                    20.2	Impure<br />
+                    21	Hardware description languages<br />
+                    21.1	HDLs for analog circuit design<br />
+                    21.2	HDLs for digital circuit design<br />
+                    22	Imperative languages<br />
+                    23	Interactive mode languages<br />
+                    24	Interpreted languages<br />
+                    25	Iterative languages<br />
+                    26	Languages by memory management type<br />
+                    26.1	Garbage collected languages<br />
+                    26.2	Languages with manual memory management<br />
+                    27	List-based languages – LISPs<br />
+                    28	Little languages<br />
+                    29	Logic-based languages<br />
+                    30	Machine languages<br />
+                    31	Macro languages<br />
+                    31.1	Textual substitution macro languages<br />
+                    31.2	Application macro languages<br />
+                    32	Metaprogramming languages<br />
+                    33	Multiparadigm languages<br />
+                    34	Numerical analysis<br />
+                    35	Non-English-based languages<br />
+                    36	Object-oriented class-based languages<br />
+                    36.1	Multiple dispatch<br />
+                    36.2	Single dispatch<br />
+                    37	Object-oriented prototype-based languages<br />
+                    38	Off-side rule languages<br />
+                    39	Procedural languages<br />
+                    40	Reflective languages<br />
+                    41	Rule-based languages<br />
+                    42	Scripting languages<br />
+                    43	Stack-based languages<br />
+                    44	Synchronous languages<br />
+                    45	Syntax handling languages<br />
+                    46	Transformation languages<br />
+                    47	Visual languages<br />
+                    48	Wirth languages<br />
+                    49	XML-based languages
+                </p>
             </div>
-            <span class="close"></span>
-            <p>
-                1	Array languages<br />
-                2	Assembly languages<br />
-                3	Authoring languages<br />
-                4	Constraint programming languages<br />
-                5	Begin...End languages<br />
-                6	Command line interface languages<br />
-                7	Compiled languages<br />
-                8	Concurrent languages<br />
-                9	Curly-bracket languages<br />
-                10	Dataflow languages<br />
-                11	Data-oriented languages<br />
-                12	Data-structured languages<br />
-                13	Decision table languages<br />
-                14	Declarative languages<br />
-                15	Embeddable languages<br />
-                15.1	In source code<br />
-                15.1.1	Server side<br />
-                15.1.2	Client side<br />
-                15.2	In object code<br />
-                16	Educational languages<br />
-                17	Esoteric languages<br />
-                18	Extension languages<br />
-                19	Fourth-generation languages<br />
-                20	Functional languages<br />
-                20.1	Pure<br />
-                20.2	Impure<br />
-                21	Hardware description languages<br />
-                21.1	HDLs for analog circuit design<br />
-                21.2	HDLs for digital circuit design<br />
-                22	Imperative languages<br />
-                23	Interactive mode languages<br />
-                24	Interpreted languages<br />
-                25	Iterative languages<br />
-                26	Languages by memory management type<br />
-                26.1	Garbage collected languages<br />
-                26.2	Languages with manual memory management<br />
-                27	List-based languages – LISPs<br />
-                28	Little languages<br />
-                29	Logic-based languages<br />
-                30	Machine languages<br />
-                31	Macro languages<br />
-                31.1	Textual substitution macro languages<br />
-                31.2	Application macro languages<br />
-                32	Metaprogramming languages<br />
-                33	Multiparadigm languages<br />
-                34	Numerical analysis<br />
-                35	Non-English-based languages<br />
-                36	Object-oriented class-based languages<br />
-                36.1	Multiple dispatch<br />
-                36.2	Single dispatch<br />
-                37	Object-oriented prototype-based languages<br />
-                38	Off-side rule languages<br />
-                39	Procedural languages<br />
-                40	Reflective languages<br />
-                41	Rule-based languages<br />
-                42	Scripting languages<br />
-                43	Stack-based languages<br />
-                44	Synchronous languages<br />
-                45	Syntax handling languages<br />
-                46	Transformation languages<br />
-                47	Visual languages<br />
-                48	Wirth languages<br />
-                49	XML-based languages
-            </p>
-        </div>
 
-    </div>
+        </div>
     </div>
 
     <div class="box">
-    <p>Postoji mnogo programskih jezika. Velika količina tih programskih jezika se ni ne koristi.</p>
-    <input id="toggle" type="checkbox">
-    <label for="toggle">Za one koji žele više</label>
-    <div id="expand">
-        <section>
-            <p>
-                postoji stranica na internetu koja ima bazu podataka skoro svih programskih jezika(1500+).<br />
-                Svi kodovi vrte isti program koji je napisan na više jezika
-            </p>
-            <a href="http://www.99-bottles-of-beer.net/">99 bottles of beer</a>
-        </section>
+        <p>Postoji mnogo programskih jezika. Velika količina tih programskih jezika se ni ne koristi.</p>
+        <input id="toggle" type="checkbox">
+        <label for="toggle">Za one koji žele više</label>
+        <div id="expand">
+            <section>
+                <p>
+                    postoji stranica na internetu koja ima bazu podataka skoro svih programskih jezika(1500+).<br />
+                    Svi kodovi vrte isti program koji je napisan na više jezika
+                </p>
+                <a href="http://www.99-bottles-of-beer.net/">99 bottles of beer</a>
+            </section>
+        </div>
+        <p>Iako postoji toliko programskih jezika. večina ljudi koristi samo desetak progrmaskih jezika. To su:</p>
+        <table style="width: 100%; width: 70%; margin-left: 15%; margin-right: 15%;">
+            <tr>
+                <td class="auto-style8">
+                    <div class="container">
+                        <a href="Python/Python.html">
+                            <img src="Indeximages/Python.png" alt="Avatar" class="image" />
+                            <div class="overlay" style="background-color: #1E415E; width: 340px; height: 340px;">
+                                <div class="text">Python</div>
+                            </div>
+                        </a>
+                    </div>
+                </td>
+                <td class="auto-style9">
+                    <div class="container">
+                        <a href="C++/C++.html">
+                            <img src="Indeximages/C++.png" alt="Avatar" class="image" />
+                            <div class="overlay" style="background-color: #004482; width: 340px; height: 340px;">
+                                <div class="text">C++</div>
+                            </div>
+                        </a>
+                    </div>
+                </td>
+                <td class="auto-style10">
+                    <div class="container">
+                        <a href="Csharp/Csharp.html">
+                            <img src="Indeximages/Csharp.png" alt="Avatar" class="image" />
+                            <div class="overlay" style="background-color: #7B3399; width: 340px; height: 340px;">
+                                <div class="text">C#</div>
+                            </div>
+                        </a>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td class="auto-style3">
+                    <div class="container">
+                        <a href="HTML/HTML.html">
+                            <img src="Indeximages/Html.png" alt="Avatar" class="image" />
+                            <div class="overlay" style="background-color: #EC662B; width: 340px; height: 340px;">
+                                <div class="text">HTML</div>
+                            </div>
+                        </a>
+                    </div>
+                </td>
+                <td class="auto-style5">
+                    <div class="container">
+                        <a href="Java/Java.html">
+                            <img src="Indeximages/Java.png" alt="Avatar" class="image" />
+                            <div class="overlay" style="background-color: #5382A1; width: 340px; height: 340px;">
+                                <div class="text">JAVA</div>
+                            </div>
+                        </a>
+                    </div>
+                </td>
+                <td class="auto-style1">
+                    <div class="container">
+                        <a href="C/C.html">
+                            <img src="Indeximages/C.png" alt="Avatar" class="image" />
+                            <div class="overlay" style="background-color: #65D0B6; width: 340px; height: 340px;">
+                                <div class="text">C</div>
+                            </div>
+                        </a>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td></td>
+                <td class="auto-style2">
+                    <div class="container">
+                        <a href="CSS/CSS.html">
+                        <img src="Indeximages/Css.png" alt="Avatar" class="image" />
+                        <div class="overlay" style="background-color: #B0C5D6; width: 340px; height: 340px;">
+                            <div class="text">CSS</div>
+                        </div>
+                            </a>
+                    </div>
+                </td>
+            </tr>
+        </table>
     </div>
-    <p>Iako postoji toliko programskih jezika. večina ljudi koristi samo desetak progrmaskih jezika. To su:</p>
-    <table style="width: 100%; width: 70%; margin-left: 15%; margin-right: 15%;">
-        <tr>
-            <td class="auto-style8">
-                <div class="container">
-                    <a href="Python/Python.html">
-                        <img src="Indeximages/Python.png" alt="Avatar" class="image" />
-                        <div class="overlay" style="background-color: #1E415E; width: 340px; height: 340px;">
-                            <div class="text">Python</div>
-                        </div>
-                    </a>
-                </div>
-            </td>
-            <td class="auto-style9">
-                <div class="container">
-                    <a href="C++/C++.html">
-                        <img src="Indeximages/C++.png" alt="Avatar" class="image" />
-                        <div class="overlay" style="background-color: #004482; width: 340px; height: 340px;">
-                            <div class="text">C++</div>
-                        </div>
-                    </a>
-                </div>
-            </td>
-            <td class="auto-style10">
-                <div class="container">
-                    <a href="Csharp/Csharp.html">
-                        <img src="Indeximages/Csharp.png" alt="Avatar" class="image" />
-                        <div class="overlay" style="background-color: #7B3399; width: 340px; height: 340px;">
-                            <div class="text">C#</div>
-                        </div>
-                    </a>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td class="auto-style3">
-                <div class="container">
-                    <a href="HTML/HTML.html">
-                        <img src="Indeximages/Html.png" alt="Avatar" class="image" />
-                        <div class="overlay" style="background-color: #EC662B; width: 340px; height: 340px;">
-                            <div class="text">HTML</div>
-                        </div>
-                    </a>
-                </div>
-            </td>
-            <td class="auto-style5">
-                <div class="container">
-                    <img src="Indeximages/Java.png" alt="Avatar" class="image" />
-                    <div class="overlay" style="background-color: #5382A1; width: 340px; height: 340px;">
-                        <div class="text">JAVA</div>
-                    </div>
-                </div>
-            </td>
-            <td class="auto-style1">
-                <div class="container">
-                    <img src="Indeximages/C.png" alt="Avatar" class="image" />
-                    <div class="overlay" style="background-color: #65D0B6; width: 340px; height: 340px;">
-                        <div class="text">C</div>
-                    </div>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td class="auto-style2">
-                <div class="container">
-                    <img src="Indeximages/Css.png" alt="Avatar" class="image" />
-                    <div class="overlay" style="background-color: #B0C5D6; width: 340px; height: 340px;">
-                        <div class="text">CSS</div>
-                    </div>
-                </div>
-            </td>
-            <td class="auto-style4">
-                <div class="container">
-                    <img src="Indeximages/Javascript.png" alt="Avatar" class="image" />
-                    <div class="overlay" style="background-color: #FDDA3E; width: 340px; height: 340px;">
-                        <div class="text">Javascript</div>
-                    </div>
-                </div>
-            </td>
-            <td>
-                <div class="container">
-                    <img src="Indeximages/swift.png" alt="Avatar" class="image" />
-                    <div class="overlay" style="background-color: #FD7734; width: 340px; height: 340px;">
-                        <div class="text">Swift</div>
-                    </div>
-                </div>
-            </td>
-        </tr>
-    </table>
-        </div>  
     <script>
         // Get the modal
         var modal = document.getElementById('myModal');
