--- a/HTML/HTML.html
+++ b/HTML/HTML.html
@@ -21,8 +21,7 @@
         <a href="../Java/Java.html">Java</a>
         <a href="../C/C.html">C</a>
         <a href="../CSS/CSS.html">CSS</a>
-        <a href="#">JS</a>
-        <a href="#">Swift</a>
+   
     </div>
     <div class="box">
         <h2>O HTML-u</h2>
@@ -99,8 +98,10 @@
             Svaka HTML oznaka (koja u paru kreira HTML element) počinje znakom < (manje od), a završava znakom > (više od).<br />
             Zatvarajuća HTML oznaka kreira se na isti način kao i otvarajuća,<br />
             ali se prije završnog znaka > dodaje i kosa crta / (engl. slash).
-            
+
         </p>
+
+        <a href="Cheatsheet.html"><button class="button" style="vertical-align:middle"><span>Cheat Sheet </span></button></a>
     </div>
 </body>
 </html>
